# AtomisticConfigMech

./: CMakeCache.txt  CMakeLists.txt  LennardJones.cpp  Lennard_Jones.h  Makefile  Stillinger_Weber.cpp  Stillinger_Weber.h  assign_region.cpp  atom.cpp  atom.h  atom_stress_2d.cpp  atoms_in_cell.cpp  bond.cpp  bond.h  boundary.cpp  boundary.h  broken_bonds.cpp  calculate_critical_EAM_force.cpp  cell.cpp  cell_neighbors.cpp  cmake_install.cmake  config.xtl  config_force_criterion.cpp  config_force_criterion_lj.cpp  crack_atoms.cpp  crack_atoms.h  dump.silicon1  dump.unrelaxed_config_silicon  dynamical_matrix.cpp  energy.cpp  energy.h  energy_release_2d.cpp  force.cpp  force.h  generate_cells.cpp  generate_waves.cpp  matrix.cpp  matrix.h  matrixx.h  modification_interaction_list_3d.cpp  (+35 more)
include/: Lennard_Jones.h  Stillinger_Weber.h  assign_region.h  atom.h  bond.h  cell.h  config_force_criterion.h  crack_atoms.h  dynamical_matrix.h  energy.h  first_order_tensor.h  force.h  matrix.h  modified_tersoff.h  neighbors.h  point.h  subcell.h  third_order_tensor.h  unrelaxed_config.h  write_data_file.h
src/core/: assign_region.cpp  atom.cpp  atom_stress_2d.cpp  atoms_in_cell.cpp  bond.cpp  boundary.cpp  cell.cpp  crack_atoms.cpp  dynamical_matrix.cpp  first_order_tensor.cpp  matrix.cpp  modification_interaction_list_3d.cpp  neighbors.cpp  point.cpp  read_dump_file.cpp  subcell.cpp  third_order_tensor.cpp  unrelaxed_config.cpp  write_data_file.cpp
src/kernels/: LennardJones.cpp  Stillinger_Weber.cpp  broken_bonds.cpp  config_force_criterion.cpp  config_force_criterion_lj.cpp  energy.cpp  force.cpp  modified_tersoff.cpp
src/test/: energy_release_2d.cpp  optimizer.cpp  optimizer_liblbfgs.cpp  practice_parallel.cpp  test_LennardJones.cpp  test_atom.cpp  test_boundary.cpp  test_cell.cpp  test_eam_cu.cpp  test_force.cpp  test_generate_cells.cpp  test_matrix.cpp  test_modified_tersoff.cpp  test_neighbor_cell_based.cpp  test_optimizer.cpp  test_point.cpp  test_silicon.cpp  test_third_order_tensor.cpp
utils/: test.data  test.plt
